<resources>
    <string name="app_name">NextTrain</string>
    <string name="location_icon_description">Train Icon</string>
    <string name="searchButtonText">SEARCH</string>
    <string name="last_direction_button_text">Favorite Route</string>
    <string name="dateIconDescription">Date Icon</string>
    <string name="startLocation">Enter start location</string>
    <string name="endLocation">Enter end location</string>
    <string name="replace_directions_description">Replace Directions</string>
    <!-- bottom nav menu -->
    <string name="home_menu">Home</string>
    <string name="tickets_menu">Tickets</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="timestamp_description">Timestamp Icon</string>
    <string name="favorite_route_description">Favorite Route Icon</string>
    <string name="direct_connection">Only Direct Connections?</string>
    <string name="search_more_button">Search More</string>
    <string name="search_menu">Search</string>
    <string name="qr_code_preview">QR Code Preview</string>
    <string name="search_for_tickets">Search For Tickets</string>
    <string name="ticket_manager_menu">Ticket Manager</string>
    <string name="upload_ticket_text">Upload Ticket</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="ticketsAppName">Active Tickets</string>
    <string name="ticketManagerDescription">Ticket Manager</string>
    <string name="ticketManagerName">Ticket\'s Manager</string>
    <string name="load_more">Load More</string>
    <string name="there_is_no_trains">There is no trains, route:</string>
</resources>