<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:autofillHints="none"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/startLocation"
                android:inputType="text"
                android:paddingBottom="1dp"
                android:textColor="@color/text"
                android:textColorHint="@color/text_color_hint"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:contentDescription="@string/location_icon_description"
                android:src="@drawable/location_icon" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:autofillHints="none"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/endLocation"
                android:inputType="text"
                android:paddingBottom="1dp"
                android:textColor="@color/text"
                android:textColorHint="@color/text_color_hint"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:contentDescription="@string/replace_directions_description"
                android:src="@drawable/change_arrows_icon" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/calendarButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/timestampTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:text=""
                android:fontFamily="@font/montserrat_medium"
                android:paddingBottom="1dp"
                android:textColor="@color/text"
                android:paddingHorizontal="5dp"
                android:textColorHint="@color/text"
                android:gravity="center_vertical"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:contentDescription="@string/replace_directions_description"
                android:src="@drawable/datetime_icon" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/favoriteConnect"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="20dp"
            android:background="@color/secondary"
            app:backgroundTint="@color/secondary"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/last_direction_button_text"
            android:textColor="@color/text"
            android:textSize="17sp"
            android:focusable="true"
            android:clickable="true"
            android:backgroundTint="@color/secondary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/searchButtonText"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            android:background="@color/secondary"
            app:backgroundTint="@color/primary"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/searchButtonText"
            android:textColor="@color/text"
            android:textSize="17sp"
            android:focusable="true"
            android:clickable="true"/>

        <View
            android:id="@+id/dimOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80000000"
            android:visibility="gone" />
    </LinearLayout>

</FrameLayout>